--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Danish Kumar</a>.
+    Coded by <a href="https://github.com/danishkumar63/">Danish Kumar</a>.
   </div>
 
 </body>
